--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,3 @@
-from flask import Flask, render_template, jsonify, request
-app = Flask(__name__)
-
-@app.route('/')
-def home():
-    return render_template('index.html')
-
-if __name__ == '__main__':
-    app.run()
+Flask
+pandas
+gunicorn
