Fix port binding for Render deployment

--- a/render.yaml
+++ b/render.yaml
@@ -3,10 +3,12 @@ services:
     name: timesheet-app
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:app
+    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.13.4
+      - key: PORT
+        value: 8000
     healthCheckPath: /
     autoDeploy: true
     plan: free
